# Veriminutes

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  VERIFICATION_GUIDE.md  config.toml  demo_tampering.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run.sh  start.py  vercel.json
contracts/: AnchorRegistry.sol
dev_tests/: check_upload_page.js  debug_upload.html  test_audio.py  test_exact_transcript.txt  test_file_input.html  test_upload.txt  test_upload_click.py
samples/: meeting_generic.txt  otter_export.txt
scripts/: setup_devnet.sh
src/: cli.py
src/app/: anchor.py  api.py  audio_recorder.py  hashing.py  macos_recorder.py  meeting_monitor.py  merkle.py  parse_txt.py  pdfgen.py  schema.py  service.py  simple_meeting.py  speaker_diarization.py  storage.py  structure.py  transcriber.py
static/: index.html  meeting.html  record.html  verify.html
tests/: test_hash.py  test_merkle.py  test_verify.py
